--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-xl-8">
-                        <h1 class="display-1 bold color_white content__title">Pingu CTF<span class="vim-caret">&nbsp;</span></h1>
+                        <h1 class="display-1 bold color_white content__title">NOOT NOOT CTF<span class="vim-caret">&nbsp;</span></h1>
                         <h1 class="display-1 bold color_white content__title2">INC 2022</h1>
                     </div>
                 </div>
