--- a/login.html
+++ b/login.html
@@ -54,7 +54,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-xl-8">
-                    <h1 class="display-1 bold color_white content__title">Noot noot CTF<span class="vim-caret">&nbsp;</span></h1>
+                    <h1 class="display-1 bold color_white content__title">NOOT NOOT CTF<span class="vim-caret">&nbsp;</span></h1>
                     <p class="text-grey text-spacey hackerFont lead mb-5">
                         Type your credentials to conquer the world
                     </p>
