--- a/register.html
+++ b/register.html
@@ -54,7 +54,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-xl-10">
-                    <h1 class="display-1 bold color_white content__title">Pingu CTF<span class="vim-caret">&nbsp;</span></h1>
+                    <h1 class="display-1 bold color_white content__title">NOOT NOOT CTF<span class="vim-caret">&nbsp;</span></h1>
                     <p class="text-grey text-spacey hackerFont lead mb-5">
                         Join the community and be part of the future of the information security industry.
                     </p>
